"unwrapped" EventGroup to List<Event>